# monty

./: .env  .gitignore  Cargo.toml  db.sqlite3  readme.md  release.json  release.py  release.sh
frontend/: build.sh  elm.json  index.html  main.js  run.sh  script.js
frontend/elm-stuff/0.19.1/: Main.elmi  Main.elmo
frontend/src/: Main.elm
migrations/2020-12-06-053026_create_emails/: up.sql
migrations/2020-12-06-080853_create_subscriptions/: up.sql
migrations/2020-12-09-153144_create_intervals_table/: up.sql
migrations/2020-12-09-153316_update_emails_table/: up.sql
migrations/2020-12-09-153325_update_subscriptions_table/: up.sql
migrations/2020-12-09-153446_update_subscriptions_table/: up.sql
migrations/2020-12-09-153830_create_intervals_subscriptions/: up.sql
migrations/2020-12-09-154628_create_currencies/: up.sql
migrations/2020-12-09-154832_update_emails/: up.sql
migrations/2020-12-20-151744_update_currencies/: up.sql
migrations/2020-12-24-124539_update_currencies_add_last_updated/: up.sql
migrations/2020-12-31-110155_update_currencies_table/: up.sql
migrations/2020-12-31-152200_update_intervals_table/: up.sql
src/: handler.rs  main.rs  middleware.rs  model.rs  populate.rs  postbody.rs  schema.rs  test_macro.rs
