[package]
name = "monty"
version = "0.1.0"
authors = ["valianmasdani"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
reqwest = { version = "0.10", features = ["json"] }
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4.0"
serde = "1.0.118"
serde_json = "1.0"