[package]
name = "monty"
version = "0.1.0"
authors = ["valianmasdani"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
diesel = { version = "1.4.4", features = ["sqlite", "r2d2", "chrono"] }
libsqlite3-sys = { version = "*", features = ["bundled"] }
tokio-diesel = "0.3.0"
diesel_migrations = "1.4.0"
serde = "1.0.118"
serde_json = "1.0"
chrono = {version = "0.4", features = [ "serde" ]} 
actix-cors = "0.5.3"
actix-service = "1.0.6"
futures = "0.3.8"
dotenv = "0.15.0"
actix-files = "0.5.0"
